<resources>
    <string name="app_name">Make Attendance</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="don_t_have_an_account_create_one">Don\'t have an account? Create one!</string>
    <string name="already_have_an_account_login">Already have an account? Login!</string>
    <string name="log_out">Log Out</string>
    <string name="staff">Staff</string>
    <string name="student">Student</string>
    <string name="home">Home</string>
    <string name="utilities">Utilities</string>
    <string name="contact_us">Contact Us</string>
    <string name="profile">Profile</string>
    <string name="home_fragments">Home Fragments</string>
    <string name="utilities_fragment">Utilities Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="contact_fragment">Contact Fragment</string>
    <string name="title">TitleName</string>
    <string name="percentage">percentage :</string>
    <string name="press_if_not_attended">press_if_not_attended</string>
    <string name="press_if_attended">press_if_attended</string>
    <string name="logout">Log Out</string>
    <string name="present">Present :</string>
    <string name="absent">Absent :</string>
    <string name="take_attendance">Take Attendance</string>
    <string name="classes_conducted">Classes Conducted :</string>
    <string name="classes_attended">Classes Attended :</string>
    <string name="notification1">You are in the short List</string>
    <string name="notification2">You are not in the short list</string>
    <string name="view_attendance">View Attendance</string>
    <string name="developer">Designed and Developed by :</string>
    <string name="developer_name">Gyarsilal Solanki</string>
    <string name="developer_email">gyarsilalsolanki011@gmail.com</string>
    <string name="linkedin">LinkedIn :</string>
    <string name="linkedIn_link">gyarsilalsolanki</string>
    <string name="github">Github :</string>
    <string name="Github_link">gyarsilalsolanki011</string>
    <string name="message_us">Message Us</string>
    <string name="e_mail_us">E-Mail Us</string>
    <string name="share_via">Share Via</string>
    <string name="select_your_field">Select Your Field</string>
    <string name="admin">Admin</string>
    <string name="faculty">Faculty</string>
    <string name="next">Move Forward</string>
    <string name="personalInformation">Personal Information</string>
    <string name="student_name">Student Name</string>
    <string name="roll_number">Roll Number</string>
    <string name="branch">Branch</string>
    <string name="semester">Semester</string>
    <string name="father_name">Father Name</string>
    <string name="mother_name">Mother Name</string>
    <string name="submit">Submit</string>
    <string name="faculty_name">Faculty Name</string>
    <string name="subject">Subject</string>
    <string name="clickHere">Click here to Select Field</string>
    <string name="personal_information">Personal Information</string>
    <string name="colon">"  :  "</string>
    <string name="your_setting">Your Setting</string>
    <string name="mc">Mobile Computing</string>
    <string name="ml">Machine Learning</string>
    <string name="cn">Computer Networking</string>
    <string name="ip">Image Processing</string>
    <string name="se">Software Engineering</string>
    <string name="whatsapp">Whatsapp Me</string>
    <string name="phone_number">+91******4421</string>
    <string name="email_address">Email Address</string>
    <string name="email_id">gyarsilalsonki011@gmail.com</string>
    <string name="ask_your_query">Ask Your Query</string>
    <string name="send_your_message">Send Your Message</string>
    <string name="image">Image Description</string>
</resources>