<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/activity_background"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_your_field"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textStyle="bold"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/radioGroup"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/student"
            android:visibility="gone"
            android:text="@string/admin"
            android:theme="@style/myTheme2"
            />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/faculty"
            android:text="@string/faculty"
            android:theme="@style/myTheme2"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/admin"
            android:text="@string/student"
            android:theme="@style/myTheme2"/>

    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/submitBtn"
        android:text="@string/next"
        android:layout_marginBottom="10dp"/>

</LinearLayout>