<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/activity_background"
    tools:context=".activities.student.fragments.StudentContactFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            app:cardBackgroundColor="@color/cardView">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/developer"
                    android:textStyle="bold"
                    android:textSize="20sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/developer_name"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/developer_email"
                    android:layout_marginStart="10dp"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:text="@string/linkedin"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="16sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:text="@string/linkedIn_link"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:text="@string/github"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="16sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:text="@string/Github_link"/>

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_us"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:textSize="30sp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnEmail"
            android:layout_gravity="center_horizontal"
            android:text="@string/e_mail_us"
            android:layout_margin="11dp"
            android:textStyle="bold"
            android:textSize="18sp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/btnMsg"
            android:text="@string/message_us"
            android:layout_margin="11dp"
            android:textStyle="bold"
            android:textSize="18sp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnShare"
            android:layout_gravity="center_horizontal"
            android:text="@string/share_via"
            android:layout_margin="15dp"
            android:textStyle="bold"
            android:textSize="18sp"
            />

    </LinearLayout>

</FrameLayout>