<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity"
    android:gravity="center"
    android:padding="16dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:textStyle="bold"
        android:text="@string/create_account"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailTextEdit"
            android:layout_width="match_parent"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fullNameTextEdit"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:hint="@string/full_name"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordTextEdit"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:hint="@string/password"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        app:passwordToggleEnabled="true"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordConfirmTextEdit"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:hint="@string/confirm_password"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/createAccountButton"
        android:layout_marginTop="24dp"
        android:paddingHorizontal="48dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account" />

    <TextView
        android:layout_marginTop="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:text="@string/already_have_an_account_login"
        android:focusable="true" />

</LinearLayout>