<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/activity_background"
    tools:context=".activities.student.fragments.StudentProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:id="@+id/constraintLay">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/profile"
            app:srcCompat="@drawable/icon_account_circle"

            app:layout_constraintTop_toTopOf="@id/constraintLay"
            app:layout_constraintStart_toStartOf="@id/constraintLay"
            app:layout_constraintEnd_toEndOf="@id/constraintLay"/>

        <TextView
            android:id="@+id/studentNameSet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/developer_name"
            android:layout_marginTop="16dp"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"

            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/rollNumberSet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:text="@string/roll_number"
            android:textColor="@color/black"
            android:textSize="20sp"

            app:layout_constraintEnd_toEndOf="@+id/studentNameSet"
            app:layout_constraintStart_toStartOf="@+id/studentNameSet"
            app:layout_constraintTop_toBottomOf="@+id/studentNameSet"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:id="@+id/card_view"
            android:padding="20dp"

            app:layout_constraintEnd_toEndOf="@id/rollNumberSet"
            app:layout_constraintStart_toStartOf="@id/rollNumberSet"
            app:layout_constraintTop_toBottomOf="@id/rollNumberSet">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textStyle="bold"
                android:textSize="30sp"
                android:gravity="center"
                android:textColor="@color/shadow_black"
                android:background="@drawable/activity_background"
                android:text="@string/personal_information"/>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="20dp"
            android:padding="10dp"

            app:layout_constraintEnd_toEndOf="@id/card_view"
            app:layout_constraintStart_toStartOf="@id/card_view"
            app:layout_constraintTop_toBottomOf="@id/card_view">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="6dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/full_name"
                    android:theme="@style/myTheme1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/colon"
                    android:theme="@style/myTheme1" />

                <TextView
                    android:id="@+id/studentFullNameSet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/developer_name"
                    android:theme="@style/myTheme1"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="6dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/father_name"
                    android:theme="@style/myTheme1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/colon"
                    android:theme="@style/myTheme1" />

                <TextView
                    android:id="@+id/studentFatherNameSet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/developer_name"
                    android:theme="@style/myTheme1"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="6dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mother_name"
                    android:theme="@style/myTheme1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/colon"
                    android:theme="@style/myTheme1" />

                <TextView
                    android:id="@+id/studentMotherNameSet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/developer_name"
                    android:theme="@style/myTheme1"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:theme="@style/myTheme1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/colon"
                    android:theme="@style/myTheme1" />

                <TextView
                    android:id="@+id/studentEmailSet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/developer_email"
                    android:textColor="@color/blue"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="6dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/semester"
                    android:theme="@style/myTheme1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/colon"
                    android:theme="@style/myTheme1" />

                <TextView
                    android:id="@+id/studentSemesterSet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/semester"
                    android:theme="@style/myTheme1"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="6dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/branch"
                    android:theme="@style/myTheme1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/colon"
                    android:theme="@style/myTheme1" />

                <TextView
                    android:id="@+id/studentBranchSet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:theme="@style/myTheme1"
                    />

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>